# aya

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Makefile  README.md  pyproject.toml
.claude/commands/: aya-refresh.md  aya-send.md
.github/workflows/: ci.yml  gateway-ci.yml  release.yml
docs/: README.md  architectural-review-ai-first.md  architecture.md  e2e-audit-2026-04-16.md  idle-tracking.md  packet-schema.md  scheduler-flow-map.md  self-hosted-relay.md
framework/scripts/: assistant_profile.py  scheduler.py  status_check.py  watcher_daemon.py
gateway/: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
gateway/app/: auth.py  effects.py  main.py
gateway/tests/: conftest.py  test_auth.py  test_effects.py  test_health.py
scripts/: bootstrap.py
skills/pack-for-home/: SKILL.md
src/ace_sync/: __init__.py  cli.py  identity.py  packet.py  relay.py
src/assistant_sync/: __init__.py  cli.py  identity.py  packet.py  pair.py  relay.py
src/aya/: __init__.py  ci.py  cli.py  credentials.py  encryption.py  identity.py  ingest.py  install.py  log.py  mcp_server.py  packet.py  pair.py  paths.py  profile.py  relay.py  scheduler.py  status.py  workspace.py
src/helm/: cli.py  (+7 more)
tests/: test_ci.py  test_cli.py  test_context.py  test_credentials.py  test_identity.py  test_install.py  test_mcp_server.py  test_packet.py  test_pair.py  test_profile.py  test_relay.py  test_scheduler.py  test_scheduler_concurrency.py  test_scheduler_display.py  test_scheduler_providers.py  test_scheduler_tick.py  test_status.py  test_workspace.py
(+11 files in other folders)
