[project]
name = "aya-gateway"
version = "0.1.0"
description = "Personal HTTP gateway — phone capture, effects, webhooks. Sibling to the aya CLI."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
]

[dependency-groups]
dev = [
    "httpx>=0.27",
    "mypy>=1.13",
    "pytest>=8.3",
    "ruff>=0.7",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true
python_version = "3.12"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
